@@ -1,1 +1,1 @@
-5.2.1-alpha01
+5.2.1
