@@ -128,11 +128,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.2.1-alpha01
-@set doc-edition 5.2.1-alpha01
+@set nco-edition 5.2.1
+@set doc-edition 5.2.1
 @set copyright-years 1995--2024
 @set update-year 2024
-@set update-date 16 February 2024
+@set update-date 18 February 2024
 @set update-month February 2024
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
